tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__func_parser__parse_simple_func.snap
---
source: src/tests/parser/stmt_parser/func_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 14,
        },
        kind: FuncDecl {
            is_static: false,
            name: "main",
            params: [],
            return_type: None,
            body: [],
        },
    },
]
